# rust-generalized-suffix-tree

./: .gitignore  Cargo.toml  README.md
src/: disjoint_set.rs  lib.rs
tests/: integration_test.rs
